--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,7 @@ layout: base
 
   <div style="padding-top:10px;">
     <div style="white-space:nowrap; width:300%" *ngFor = "let text of data">
-      <span class="commentary">DISCLAIMER: The postings expressed in this site are my own and are NOT shared, supported, or endorsed by any individual or organization.</span>
+      <span class="commentary">DISCLAIMER: The posts on this site are my own and are NOT shared, supported, or endorsed by any individual or organization. Please see "Terms & Conditions" and "Privacy Policy" sections.</span>
     </div>
   </div>
 </marquee>
