--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="Avinash Karn PhD", "Avinash Karn", "Avi Karn", "Quantitative Genetics", "Cornell", "Food blog", "AmpSeq", "Computational Biology", "NIR", "QTL mapping", "TASSEL", "GBS", "Amplicon Sequencing", "LepMap3", "Genetic Mapping", "genotype-by-sequencing", "rhAmpSeq", "GWAS", "Biryani", "Momo">
 
   <!-- favicon -->
-  <link rel="shortcut icon" type="image/jpg" href="/image/avi.jpg" />
+  <link rel="shortcut icon" type="jpg" href="/image/avi.jpg" />
 
   <!-- MathJax -->
   <script type="text/x-mathjax-config">MathJax.Hub.Config({messageStyle: 'none',tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
